--- a/_30-webapp/src/main/webapp/index.html
+++ b/_30-webapp/src/main/webapp/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hello world Tomcat</title>
 </head>
 <body>
+<h1>Hello world Tomcat</h1>
 
 </body>
 </html>
