--- a/_30-webapp/src/main/webapp/index.html
+++ b/_30-webapp/src/main/webapp/index.html
@@ -6,6 +6,20 @@
 </head>
 <body>
 <h1>Hello world Tomcat</h1>
+<ul>
+    <li>
+        <a href="/webapp/parameters/url-get?salute=Hello Gaston"> sending salute parameter: /url-get?salute=Hello Gaston</a>
+    </li>
+    <li>
+        <a href="/webapp/parameters/url-get?salute=Hello&name=Gaston&code=12345"> /url-get?salute=Hello&name=Gaston&code=12345</a>
+    </li>
+    <li>
+        <a href="/webapp/parameters/url-get?salute=Hello&name=Gaston"> /url-get?salute=Hello&name=Gaston</a>
+    </li>
+    <li>
+        <a href="/webapp/parameters/url-get?name=Gaston"> /url-get?name=Gaston</a>
+    </li>
+</ul>
 
 </body>
 </html>
