XlsServlet and form HeadersRequestServlet

--- a/_32-webapp-headers/src/main/webapp/index.html
+++ b/_32-webapp-headers/src/main/webapp/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>HTTP headers</title>
 </head>
 <body>
-
+<h3> HTTP Headers</h3>
+<a href="/webapp-headers/headers-request">/webapp-headers/headers-request</a>
 </body>
 </html>
