--- a/_32-webapp-headers/src/main/webapp/index.html
+++ b/_32-webapp-headers/src/main/webapp/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 <h3> HTTP Headers</h3>
-<a href="/webapp-headers/headers-request">/webapp-headers/headers-request</a>
+<ul>
+    <li><a href="/webapp-headers/headers-request">Headers Http Request</a></li>
+    <li><a href="/webapp-headers/products">Show products html</a></li>
+    <li><a href="/webapp-headers/products.xls">Export to xls</a></li>
+    <li><a href="/webapp-headers/products.json">Show json</a></li>
+
+</ul>
 </body>
 </html>
