UpdateTimeServlet, redirect and dispatch servlets

--- a/_32-webapp-headers/src/main/webapp/index.html
+++ b/_32-webapp-headers/src/main/webapp/index.html
@@ -11,6 +11,9 @@
     <li><a href="/webapp-headers/products">Show products html</a></li>
     <li><a href="/webapp-headers/products.xls">Export to xls</a></li>
     <li><a href="/webapp-headers/products.json">Show json</a></li>
+    <li><a href="/webapp-headers/updated-time">Current time</a></li>
+    <li><a href="/webapp-headers/redirect">Redirect</a></li>
+    <li><a href="/webapp-headers/dispatch">Dispatch</a></li>
 
 </ul>
 </body>
