--- a/_32-webapp-headers/src/main/webapp/index.html
+++ b/_32-webapp-headers/src/main/webapp/index.html
@@ -14,6 +14,8 @@
     <li><a href="/webapp-headers/updated-time">Current time</a></li>
     <li><a href="/webapp-headers/redirect">Redirect</a></li>
     <li><a href="/webapp-headers/dispatch">Dispatch</a></li>
+    <li><a href="/webapp-headers/login.html">Login</a></li>
+    <li><a href="/webapp-headers/search.html">Search product</a></li>
 
 </ul>
 </body>
