--- a/_33-webapp-cookies/src/main/webapp/index.html
+++ b/_33-webapp-cookies/src/main/webapp/index.html
@@ -7,8 +7,9 @@
 <body>
 <h3> Cookies handling </h3>
 <ul>
-    <li><a href="/webapp-headers/products">Show products html</a></li>
-    <li><a href="/webapp-headers/login.html">Login</a></li>
+    <li><a href="/webapp-cookie/products">Show products html</a></li>
+    <li><a href="/webapp-cookie/login.html">Login</a></li>
+    <li><a href="/webapp-cookie/logout">Logout</a></li>
 
 </ul>
 </body>
